refactor: optimize code update and create apppointment